--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.6.1",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/vite": "^4.0.14",
     "axios": "^1.8.3",
     "jsonp": "^0.2.1",
@@ -19,6 +20,7 @@
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
+    "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
